Edit header to fix overlap bug

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -80,6 +80,9 @@ img.production-icon {
 }
 
 #game-header {
+  position: absolute;
+  z-index: 200;
+  width: 100%;
   height: 33px;
   background-color: black;
   border-bottom: 3px solid gray;
